// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/timeline/demo/basic.md correctly 1`] = `
<ul
  class="c7n-timeline"
>
  <li
    class="c7n-timeline-item"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-blue"
    />
    <div
      class="c7n-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="c7n-timeline-item"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-blue"
    />
    <div
      class="c7n-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    class="c7n-timeline-item"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-blue"
    />
    <div
      class="c7n-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    class="c7n-timeline-item c7n-timeline-item-last"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-blue"
    />
    <div
      class="c7n-timeline-item-content"
    >
      Network problems being solved 2015-09-01
    </div>
  </li>
</ul>
`;

exports[`renders ./components/timeline/demo/color.md correctly 1`] = `
<ul
  class="c7n-timeline"
>
  <li
    class="c7n-timeline-item"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-green"
    />
    <div
      class="c7n-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="c7n-timeline-item"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-green"
    />
    <div
      class="c7n-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="c7n-timeline-item"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-red"
    />
    <div
      class="c7n-timeline-item-content"
    >
      <p>
        Solve initial network problems 1
      </p>
      <p>
        Solve initial network problems 2
      </p>
      <p>
        Solve initial network problems 3 2015-09-01
      </p>
    </div>
  </li>
  <li
    class="c7n-timeline-item c7n-timeline-item-last"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-blue"
    />
    <div
      class="c7n-timeline-item-content"
    >
      <p>
        Technical testing 1
      </p>
      <p>
        Technical testing 2
      </p>
      <p>
        Technical testing 3 2015-09-01
      </p>
    </div>
  </li>
</ul>
`;

exports[`renders ./components/timeline/demo/custom.md correctly 1`] = `
<ul
  class="c7n-timeline"
>
  <li
    class="c7n-timeline-item"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-blue"
    />
    <div
      class="c7n-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="c7n-timeline-item"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-blue"
    />
    <div
      class="c7n-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    class="c7n-timeline-item"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-custom c7n-timeline-item-head-red"
    >
      <i
        class="icon icon-clock-circle-o"
        style="font-size:16px"
      />
    </div>
    <div
      class="c7n-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    class="c7n-timeline-item c7n-timeline-item-last"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-blue"
    />
    <div
      class="c7n-timeline-item-content"
    >
      Network problems being solved 2015-09-01
    </div>
  </li>
</ul>
`;

exports[`renders ./components/timeline/demo/pending.md correctly 1`] = `
<ul
  class="c7n-timeline c7n-timeline-pending"
>
  <li
    class="c7n-timeline-item"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-blue"
    />
    <div
      class="c7n-timeline-item-content"
    >
      Create a services site 2015-09-01
    </div>
  </li>
  <li
    class="c7n-timeline-item"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-blue"
    />
    <div
      class="c7n-timeline-item-content"
    >
      Solve initial network problems 2015-09-01
    </div>
  </li>
  <li
    class="c7n-timeline-item c7n-timeline-item-last"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-blue"
    />
    <div
      class="c7n-timeline-item-content"
    >
      Technical testing 2015-09-01
    </div>
  </li>
  <li
    class="c7n-timeline-item c7n-timeline-item-pending"
  >
    <div
      class="c7n-timeline-item-tail"
    />
    <div
      class="c7n-timeline-item-head c7n-timeline-item-head-custom c7n-timeline-item-head-blue"
    >
      <i
        class="icon icon-loading"
      />
    </div>
    <div
      class="c7n-timeline-item-content"
    >
      Recording...
    </div>
  </li>
</ul>
`;
